--- a/package.json
+++ b/package.json
@@ -4,12 +4,19 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node_modules/mocha/bin/mocha tests/*.spec.js"
   },
   "author": "Michael Benford <michael@michaelbenford.net>",
   "license": "MIT",
   "dependencies": {
     "ejs": "^2.3.1",
-    "express": "^4.12.3"
+    "express": "^4.12.3",
+    "request": "^2.53.0"
+  },
+  "devDependencies": {
+    "expect.js": "^0.3.1",
+    "mocha": "^2.2.1",
+    "proxyquire": "^1.4.0",
+    "sinon": "^1.14.1"
   }
 }
