Gerador de playlist implementado

--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "Michael Benford <michael@michaelbenford.net>",
   "license": "MIT",
   "dependencies": {
+    "async": "^0.9.0",
     "ejs": "^2.3.1",
     "express": "^4.12.3",
+    "lodash": "^3.5.0",
     "request": "^2.53.0"
   },
   "devDependencies": {
